Portfolio site finished as per course

--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+{% load static %}
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -45,20 +46,20 @@
   <body>
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Yohan Nugera</a>
+        <a class="navbar-brand" href="{% url 'home' %}">Yohan Nugera</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#">Twitter</a>
+              <a class="nav-link" href="https://twitter.com/YNugera">Twitter</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Resume</a>
+              <a class="nav-link" href="{% static 'CV-YohanNugera.pdf' %}">Resume</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#">Blog</a>
+              <a class="nav-link" href="{% url 'allblogs' %}">Blog</a>
             </li>
           </ul>
         </div>
@@ -74,7 +75,7 @@
   <hr />
 
         {% for blog in blogs.all %}
-          <a href=""><h4>{{ blog.title }}</h4></a>
+          <a href="{% url 'detail' blog.id %}"><h4>{{ blog.title }}</h4></a>
           {{ blog.pub_date_pretty }}
           <br />
           <img class="img-fluid" src="{{ blog.image.url }}" height=200 width=200 />
